--- a/tmux_scripts/dataset/custom_configs/uav_manager.yaml
+++ b/tmux_scripts/dataset/custom_configs/uav_manager.yaml
@@ -1,7 +1,1 @@
-takeoff:
-
-  after_takeoff:
-
-    controller: "So3Controller"
-
-  takeoff_height: 2.5
+../../ballcatcher/custom_configs/uav_manager.yaml
