--- a/tmux_scripts/dataset/custom_configs/landoff_tracker.yaml
+++ b/tmux_scripts/dataset/custom_configs/landoff_tracker.yaml
@@ -1,13 +1,1 @@
-max_position_difference: 1.5
-
-vertical_tracker:
-
-  takeoff_speed: 0.5
-  takeoff_acceleration: 1.0
-
-  landing_speed: 0.5
-  landing_acceleration: 0.3
-
-  # beware, this is for emergency landing only
-  elanding_speed: 1.1
-  elanding_acceleration: 1.0
+../../ballcatcher/custom_configs/landoff_tracker.yaml
