--- a/tmux_scripts/dataset/custom_configs/odometry.yaml
+++ b/tmux_scripts/dataset/custom_configs/odometry.yaml
@@ -1,6 +1,1 @@
-altitude:
-  # Covariances of measurements
-  Q:
-    height_range: [1000] # 0.04 stddev in simulation
-
-# altitude_estimator: "BARO"
+../../ballcatcher/custom_configs/odometry.yaml
