cleanup, fixes, minor improevments

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -14,6 +14,7 @@ params.add("lurking__min_observing_duration", double_t, 1, "how long does the tr
 params.add("lurking__min_last_points", int_t, 1, "how many points in minimal have to be observed before transitioning to the lurking state", 3, 0, 120);
 params.add("lurking__z_offset", double_t, 1, "the lurking position will be offset relative to the ball trajectory by this value in the z direction", -1.0, -5.0, 5.0);
 params.add("lurking__max_reposition", double_t, 1, "maximal adaptive reposition distance from the original lurking position", 1.0, 0.0, 5.0);
+# params.add("lurking__max_reyaw", double_t, 1, "maximal change in yaw when adaptively repositioning from the original lurking yaw", 1.0, 0.0, 5.0);
 
 params.add("z_bounds__min", double_t, 1, "balloon detection below this height will be discarded", 1.0, 0.0, 20.0);
 params.add("z_bounds__max", double_t, 1, "balloon detection above this height will be discarded", 1.0, 0.0, 20.0);
