--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -1,22 +1,14 @@
+
 planning_period: 0.1 # seconds
 
+# detections and predictions older than this are ignored
 max_unseen_duration: 10.0 # seconds
 
-glancing:
-  yaw_rate: 1.57 # radians per second
-  duration: 1.0 # seconds
-
 approach_speed: 6.0 # metres per second
-chase_speed: 6.0 # metres per second
-catch_trigger_distance: 2.5 # metres
-
-yawing:
-  max_ball_distance: 666.0 # metres
 
 lurking:
   z_offset: -0.5 # metres
-  observe_dist: 5 # metres
-  max_dist_from_trajectory: 5 # metres
+  reaction_dist: 5.0 # metres - when the ball gets closer than this, start reacting to its predicted trajectory
   max_reposition: 1.0 # metres
   min_observing_duration: 30.0 # the target must be observed at least this amount of seconds to start lurking
   min_last_points: 10 # how many last points at minimum to use when RANSACing the lurking position
@@ -30,13 +22,6 @@ trajectory:
 z_bounds:
   min: 6.0
   max: 20.0
-
-# constraint_ranges:
-#   {
-#     "ballcatch_fast":   3.00,
-#     "ballcatch_medium": 8.00,
-#     "ballcatch_slow":   .inf,
-#   }
 
 constraint_states:
   {
