--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -8,11 +8,12 @@ approach_speed: 6.0 # metres per second
 
 lurking:
   z_offset: -0.5 # metres
-  reaction_dist: 7.0 # metres - when the ball gets closer than this, start reacting to its predicted trajectory
+  reaction_dist: 8.0 # metres - when the ball gets closer than this, start reacting to its predicted trajectory
   max_reposition: 1.5 # metres
   min_observing_duration: 30.0 # the target must be observed at least this amount of seconds to start lurking
   min_last_points: 10 # how many last points at minimum to use when RANSACing the lurking position
   min_last_duration: 3 # how many last sedonds at minimum to use when RANSACing the lurking position
+  passthrough_detection_distance: 4.0 # metres - when distance of the ball is smaller, the signed distnace from YZ lurk plane will be used for detecting passthrough
 
 trajectory:
   sampling_dt: 0.2 # seconds
