--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -21,9 +21,10 @@ trajectory:
   horizon: 8.0 # seconds
   target_offset: 5.0 # metres
 
-z_bounds:
-  min: 6.0
-  max: 20.0
+pogo:
+  min_height: 5.5 # metres
+  max_height: 15.0 # metres
+  speed: 1.0 # metres per second
 
 constraint_states:
   {
@@ -45,6 +46,7 @@ start_position:
     -0.1    # yaw (radians)
   ]
 
+landing_height: 6.0 # metres
 ## ############### NOW SPECIFIED IN THE WORLD FILE ###############
 # landing_position:
 #   [
