--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -11,7 +11,7 @@ lurking:
   z_offset: -1.5 # metres
   reaction_dist: 15.0 # metres - when the ball gets closer than this, start reacting to its predicted trajectory
   max_reposition: 15.0 # metres
-  min_observing_duration: 6666.0 # the target must be observed at least this amount of seconds to start lurking
+  min_observing_duration: 1.0 # the target must be observed at least this amount of seconds to start lurking
   min_last_points: 10 # how many last points at minimum to use when RANSACing the lurking position
   min_last_duration: 3 # how many last sedonds at minimum to use when RANSACing the lurking position
   passthrough_detection_distance: 4.0 # metres - when distance of the ball is smaller, the signed distnace from YZ lurk plane will be used for detecting passthrough
@@ -19,7 +19,8 @@ lurking:
 trajectory:
   sampling_dt: 0.2 # seconds
   horizon: 8.0 # seconds
-  target_reached_distance: 1.0 # metre - at this distance from the target point it is considered to be reached
+  target_reached_distance: 0.5 # metre - at this distance from the target point it is considered to be reached
+  default_speed: 3.0 # metres per second - used for boring maneuvres (such as from obs. pos. to lurk pos.)
 
 pogo:
   min_height: 5.5 # metres
@@ -28,13 +29,15 @@ pogo:
 
 constraint_states:
   {
-    "lost_glancing": "ballcatch_slow",
+    "going_to_nextpos": "ballcatch_slow",
     "waiting_for_detection": "ballcatch_slow",
     "observing": "ballcatch_slow",
     "yawing_detection": "ballcatch_slow",
     "following_detection": "ballcatch_slow",
     "following_prediction": "ballcatch_slow",
-    "going_to_lurk": "ballcatch_slow",
+    "going_to_lurk_down": "ballcatch_slow",
+    "going_to_lurk_horizontal": "ballcatch_slow",
+    "going_to_lurk_up": "ballcatch_slow",
     "lurking": "ballcatch_fast",
   }
 
