--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -8,13 +8,15 @@ max_unseen_duration: 1.0 # seconds
 approach_speed: 6.0 # metres per second
 
 lurking:
-  z_offset: -1.5 # metres
+  z_offset: 0.0 # metres
   reaction_dist: 15.0 # metres - when the ball gets closer than this, start reacting to its predicted trajectory
-  max_reposition: 5.0 # metres
+  max_reposition: 6.0 # metres
   min_observing_duration: 80.0 # the target must be observed at least this amount of seconds to start lurking
-  min_last_points: 10 # how many last points at minimum to use when RANSACing the lurking position
-  min_last_duration: 3 # how many last sedonds at minimum to use when RANSACing the lurking position
+  min_last_points: 10 # how many last points at minimum to use when RANSACing the lurking position - UNUSED
+  min_last_duration: 3 # how many last sedonds at minimum to use when RANSACing the lurking position - UNUSED
   passthrough_detection_distance: 10.0 # metres - when distance of the ball is smaller, the signed distnace from YZ lurk plane will be used for detecting passthrough
+  land_check: true
+  land_after_first_passthrough: false
 
 trajectory:
   sampling_dt: 0.2 # seconds
