--- a/tmux_scripts/simulation/custom_configs/odometry.yaml
+++ b/tmux_scripts/simulation/custom_configs/odometry.yaml
@@ -1,4 +1,4 @@
-altitude:
-  # Covariances of measurements
-  Q:
-    height_range: [10] # 0.04 stddev in simulation
+# altitude:
+#   # Covariances of measurements
+#   Q:
+#     height_range: [10] # 0.04 stddev in simulation
