--- a/tmux_scripts/simulation/custom_configs/constraint_manager.yaml
+++ b/tmux_scripts/simulation/custom_configs/constraint_manager.yaml
@@ -2,9 +2,6 @@ constraints: [
   "slow",
   "medium",
   "fast",
-  "ballcatch_slow",
-  "ballcatch_medium",
-  "ballcatch_fast",
 ]
 
 constraint_management:
@@ -15,81 +12,9 @@ constraint_management:
       "slow",
       "medium",
       "fast",
-      "ballcatch_slow",
-      "ballcatch_medium",
-      "ballcatch_fast",
       ]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
-    GPS: "ballcatch_fast"
-
-ballcatch_slow:
-  horizontal:
-    speed: 9.0
-    acceleration: 1.1
-    jerk: 10.0
-    snap: 10.0
-  vertical:
-    ascending:
-      speed: 2.0
-      acceleration: 2.0
-      jerk: 5.0
-      snap: 3.0
-    descending:
-      speed: 2.0
-      acceleration: 2.0
-      jerk: 5.0
-      snap: 3.0
-  yaw:
-    speed: 2.0
-    acceleration: 2.0
-    jerk: 3.0
-    snap: 5.0
-
-ballcatch_medium:
-  horizontal:
-    speed: 9.0
-    acceleration: 2.2
-    jerk: 10.0
-    snap: 10.0
-  vertical:
-    ascending:
-      speed: 2.0
-      acceleration: 2.0
-      jerk: 5.0
-      snap: 3.0
-    descending:
-      speed: 2.0
-      acceleration: 2.0
-      jerk: 5.0
-      snap: 3.0
-  yaw:
-    speed: 2.0
-    acceleration: 2.0
-    jerk: 3.0
-    snap: 5.0
-
-ballcatch_fast:
-  horizontal:
-    speed: 9.0
-    acceleration: 3.3
-    jerk: 10.0
-    snap: 10.0
-  vertical:
-    ascending:
-      speed: 2.0
-      acceleration: 2.0
-      jerk: 5.0
-      snap: 3.0
-    descending:
-      speed: 2.0
-      acceleration: 2.0
-      jerk: 5.0
-      snap: 3.0
-  yaw:
-    speed: 2.0
-    acceleration: 2.0
-    jerk: 3.0
-    snap: 5.0
+    GPS: "fast"
