--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -25,16 +25,16 @@ trajectory:
   default_speed: 3.0 # metres per second - used for boring maneuvres (such as from obs. pos. to lurk pos.)
 
 pogo:
-  min_height: 5.5 # metres
-  max_height: 15.0 # metres
+  min_height: 8.5 # metres
+  max_height: 13.0 # metres
   speed: 1.0 # metres per second
 
 constraint_states:
   {
     "going_to_nextpos": "slow",
     "going_to_nextpos_low": "slow",
-    "waiting_for_detection": "slow",
-    "observing": "slow",
+    "waiting_for_detection": "fast",
+    "observing": "fast",
     "yawing_detection": "slow",
     "following_detection": "slow",
     "following_prediction": "slow",
@@ -46,11 +46,19 @@ constraint_states:
 
 start_position:
   [
-    0.0,   # x coordinate (metres)
-    -20.0,  # y coordinate (metres)
-    12.0,   # z coordinate (metres)
-    1.57    # yaw (radians)
+    47.0,   # x coordinate (metres)
+    0.0,  # y coordinate (metres)
+    10.0,   # z coordinate (metres)
+    3.1416    # yaw (radians)
   ]
+
+# start_position:
+#   [
+#     0.0,   # x coordinate (metres)
+#     -20.0,  # y coordinate (metres)
+#     12.0,   # z coordinate (metres)
+#     1.57    # yaw (radians)
+#   ]
 
 landing_height: 5.5 # metres
 ## ############### NOW SPECIFIED IN THE WORLD FILE ###############
