refactored balloon to ball, new mrs_lib

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 
-PACKAGE='balloon_planner'
+PACKAGE='ball_planner'
 import roslib;
 roslib.load_manifest(PACKAGE)
 
@@ -8,7 +8,7 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator();
 
-params = gen.add_group("Balloon planner parameters");
+params = gen.add_group("Ball planner parameters");
 
 params.add("lurking__min_observing_duration", double_t, 1, "how long does the trajectory have to be observed before transitioning to the lurking state", 3.0, 0.0, 1000.0);
 params.add("lurking__min_last_points", int_t, 1, "how many points in minimal have to be observed before transitioning to the lurking state", 3, 0, 120);
@@ -21,4 +21,4 @@ params.add("trajectory__horizon", double_t, 1, "planning horizong (how much forw
 params.add("approach_speed", double_t, 1, "max. speed to approach the ball", 2.0, 0.0, 20.0);
 params.add("chase_speed", double_t, 1, "speed increase (relative to ball speed) when chasing the ball", 2.0, 0.0, 20.0);
 
-exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
+exit(gen.generate(PACKAGE, "ball_planner", "PlanningParams"))
