--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(balloon_planner)
+project(ball_planner)
 
 set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -O0 -g -fvar-tracking -fvar-tracking-assignments -DEIGEN_INITIALIZE_MATRICES_BY_NAN")
 set(CMAKE_CXX_FLAGS_DEBUG "-std=c++17 -Wall -O0 -g -fvar-tracking -fvar-tracking-assignments -DEIGEN_INITIALIZE_MATRICES_BY_NAN")
@@ -17,10 +17,8 @@ find_package(catkin REQUIRED COMPONENTS
   pcl_ros
   cv_bridge
   message_generation
-  balloon_filter
+  ball_filter
   )
-
-find_package(OpenCV 3.2 REQUIRED)
 
 # include Eigen3
 find_package(Eigen3 REQUIRED)
@@ -31,7 +29,7 @@ generate_dynamic_reconfigure_options(
 
 catkin_package(
   INCLUDE_DIRS include
-  LIBRARIES BalloonPlanner
+  LIBRARIES BallPlanner
   CATKIN_DEPENDS
   #  DEPENDS system_lib
   )
@@ -46,19 +44,17 @@ catkin_package(
 include_directories(
   include
   ${catkin_INCLUDE_DIRS}
-  ${OpenCV_INCLUDE_DIRS}
   ${Eigen_INCLUDE_DIRS}
   )
 
 ## Declare a C++ executable
-add_library(BalloonPlanner
-  src/BalloonPlanner.cpp
+add_library(BallPlanner
+  src/BallPlanner.cpp
   )
-add_dependencies(BalloonPlanner
+add_dependencies(BallPlanner
   ${${PROJECT_NAME}_EXPORTED_TARGETS}
   ${catkin_EXPORTED_TARGETS})
 ## Specify libraries to link a library or executable target against
-target_link_libraries(BalloonPlanner
+target_link_libraries(BallPlanner
   ${catkin_LIBRARIES}
-  ${OpenCV_INCLUDE_DIRS}
   )
